gitignore json files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Don't accidentally your OAUTH file!
 oauth_file
 
+# Don't accidentally your raw data, because so big data
+*.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
